--- a/employee/templates/employee/base.html
+++ b/employee/templates/employee/base.html
@@ -22,7 +22,7 @@
     <header class="site-header mb-5" style="position: relative;">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark bg-steel">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">Cloth Store</a>
+                <a class="navbar-brand mr-4" href="/product/">Cloth Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,8 +31,8 @@
                     <div class="navbar-nav mr-auto ">
                         {% if user.is_authenticated %}
                             <a class="nav-item nav-link" href="#">Product</a>
-                            <a class="nav-item nav-link" href="#">Invoice</a>
-                            <a class="nav-item nav-link" href="#">Logout</a>
+                            
+                            <a class="nav-item nav-link" href="/logout/">Logout</a>
                         {% endif %}
                        
                     </div>
